--- a/quiz achivements/achivements.html
+++ b/quiz achivements/achivements.html
@@ -9,9 +9,60 @@
 </head>
 <body>
     <header>
+        <a href="./mainpage.html"><img class="logotype" src="./img/logo.svg" alt="logotype"></a>
+        <div class="menu">
+            <a href="#">
+                <img class="menu-style" src="./img/settings.svg" alt="settings">
+            </a>
+            <a href="#">
+                <img class="menu-style" src="./img/friends.svg" alt="friends">
+            </a>
+            <a href="#">
+                <img class="menu-style" src="./img/leaderboard.svg" alt="leaderboard">
+            </a>
+            <a href="#">
+                <img class="menu-style" src="./img/achievements.svg" alt="achievements">
+            </a>
+            <a href="./profile/login.html">
+                <img class="menu-style" src="./img/personalprofile.svg" alt="profile">
+            </a>
+        </div>
     </header>
     <main>
         <h1>Достижения</h1>
-        
+        <div class="achivement-position">
+            <img class="achive-picture" src="./img/achivedem.svg" alt="достижение">
+            <div class="achive-description">
+                <h2 class="achive-name">Молодец</h2>
+                <p>Получить максимальное количество правильных ответов</p>
+            </div>
+        </div>
+        <div class="achivement-position">
+            <img class="achive-picture" src="./img/achivedem.svg" alt="достижение">
+            <div class="achive-description">
+                <h2 class="achive-name">Фэйл</h2>
+                <p>Ответить на все вопросы неправильно</p>
+            </div>
+        </div>
+        <div class="achivement-position">
+            <img class="achive-picture" src="./img/achivedem.svg" alt="достижение">
+            <div class="achive-description">
+                <h2 class="achive-name">Начало</h2>
+                <p>Пройти первый квиз</p>
+            </div>
+        </div>
     </main>
+    <footer>
+        <div class="footer-menu">
+            <a href="./about.html">
+                <li class="footer-text-style">О проекте</li>
+            </a>
+            <a href="./contacts.html">
+                <li class="footer-text-style">Контакты</li>
+            </a>
+            <a href="#">
+                <li class="footer-text-style">Обратная связь</li>
+            </a>
+        </div>
+    </footer>
 </body>
